--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>LaShi</h1>
+  <h1>Hello, I'm learning HTML, CSS, and Javascript!</h1>
   <p>Welcome to my practice site!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
